[gd_scene load_steps=7 format=3 uid="uid://cd7bx6wwi4e5r"]

[ext_resource type="Script" path="res://Scripts/Utils/UI/hud.gd" id="1_8igy1"]
[ext_resource type="Texture2D" uid="uid://dvd1ft7u74to4" path="res://Assets/PNG/UI/playerLife2_blue.png" id="2_bxn3j"]
[ext_resource type="Texture2D" uid="uid://y0a0jghoaax8" path="res://Assets/PNG/UI/numeralX.png" id="3_khvu3"]
[ext_resource type="Texture2D" uid="uid://ck6h1xkdnwjlc" path="res://Assets/PNG/UI/numeral3.png" id="4_nlajh"]
[ext_resource type="Texture2D" uid="uid://dkunj8vs7wem1" path="res://Assets/PNG/UI/numeral0.png" id="5_v6gt2"]
[ext_resource type="Texture2D" uid="uid://dogcffpsxg1s2" path="res://Assets/PNG/Enemies/enemyRed1.png" id="6_y086j"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_8igy1")

[node name="Life" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 25.0
offset_top = 23.0
offset_right = 113.0
offset_bottom = 51.0

[node name="LifeIcon" type="TextureRect" parent="Life"]
layout_mode = 0
offset_right = 37.0
offset_bottom = 26.0
texture = ExtResource("2_bxn3j")
stretch_mode = 2

[node name="NumeralX" type="Sprite2D" parent="Life"]
position = Vector2(51, 14)
texture = ExtResource("3_khvu3")

[node name="LifeCountNumeral" type="Sprite2D" parent="Life"]
position = Vector2(76, 14)
texture = ExtResource("4_nlajh")

[node name="Score" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1016.0
offset_top = 19.0
offset_right = 1016.0
offset_bottom = 19.0

[node name="Digits" type="HBoxContainer" parent="Score"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Digit1" type="TextureRect" parent="Score/Digits"]
layout_mode = 2
texture = ExtResource("5_v6gt2")
stretch_mode = 2

[node name="Digit2" type="TextureRect" parent="Score/Digits"]
layout_mode = 2
texture = ExtResource("5_v6gt2")
stretch_mode = 2

[node name="Digit3" type="TextureRect" parent="Score/Digits"]
layout_mode = 2
texture = ExtResource("5_v6gt2")
stretch_mode = 2

[node name="Digit4" type="TextureRect" parent="Score/Digits"]
layout_mode = 2
texture = ExtResource("5_v6gt2")
stretch_mode = 2

[node name="Digit5" type="TextureRect" parent="Score/Digits"]
layout_mode = 2
texture = ExtResource("5_v6gt2")
stretch_mode = 2

[node name="FPS" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 1088.0
offset_top = 600.0
offset_right = 1128.0
offset_bottom = 640.0

[node name="Label" type="Label" parent="FPS"]
layout_mode = 0
offset_left = -24.0
offset_top = 30.0
offset_right = 64.0
offset_bottom = 48.0
theme_override_colors/font_outline_color = Color(0.494118, 0.494118, 0.494118, 1)
theme_override_constants/outline_size = 6
text = "FPS:"
vertical_alignment = 2

[node name="FPSCount" type="Label" parent="FPS"]
layout_mode = 0
offset_left = -12.0
offset_top = 30.0
offset_right = 64.0
offset_bottom = 48.0
theme_override_colors/font_outline_color = Color(0.494118, 0.494118, 0.494118, 1)
theme_override_constants/outline_size = 6
text = "60"
horizontal_alignment = 2
vertical_alignment = 2

[node name="ElapsedTime" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1018.0
offset_top = 52.0
offset_right = 1058.0
offset_bottom = 68.0

[node name="Digits" type="HBoxContainer" parent="ElapsedTime"]
layout_mode = 0
offset_left = 4.0
offset_right = 106.0
offset_bottom = 19.0

[node name="Digit1" type="TextureRect" parent="ElapsedTime/Digits"]
layout_mode = 2
texture = ExtResource("5_v6gt2")
stretch_mode = 2

[node name="Digit2" type="TextureRect" parent="ElapsedTime/Digits"]
layout_mode = 2
texture = ExtResource("5_v6gt2")
stretch_mode = 2

[node name="Separator" type="Label" parent="ElapsedTime/Digits"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.494118, 0.494118, 0.494118, 1)
theme_override_colors/font_outline_color = Color(0.494118, 0.494118, 0.494118, 1)
theme_override_constants/outline_size = 8
text = " :"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Digit3" type="TextureRect" parent="ElapsedTime/Digits"]
layout_mode = 2
texture = ExtResource("5_v6gt2")
stretch_mode = 2

[node name="Digit4" type="TextureRect" parent="ElapsedTime/Digits"]
layout_mode = 2
texture = ExtResource("5_v6gt2")
stretch_mode = 2

[node name="EnemiesLeft" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 17.0
offset_top = 608.0
offset_right = 105.0
offset_bottom = 636.0

[node name="LifeIcon" type="TextureRect" parent="EnemiesLeft"]
layout_mode = 0
offset_left = 7.0
offset_right = 100.0
offset_bottom = 84.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_y086j")
stretch_mode = 2

[node name="Digits" type="HBoxContainer" parent="EnemiesLeft"]
layout_mode = 0
offset_left = 40.0
offset_top = 3.0
offset_right = 142.0
offset_bottom = 22.0

[node name="Digit1" type="TextureRect" parent="EnemiesLeft/Digits"]
layout_mode = 2
texture = ExtResource("5_v6gt2")
stretch_mode = 2

[node name="Digit2" type="TextureRect" parent="EnemiesLeft/Digits"]
layout_mode = 2
texture = ExtResource("5_v6gt2")
stretch_mode = 2

[node name="Digit3" type="TextureRect" parent="EnemiesLeft/Digits"]
layout_mode = 2
texture = ExtResource("5_v6gt2")
stretch_mode = 2
